Time thing works again and added check so user has to choose minimum 1 day

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
@@ -115,7 +115,7 @@
 	<div class="dialog-buttons" mat-dialog-actions style="float: right">
 	  <button mat-button (click)="onNoClick()" tabindex="2">Cancel</button>
 	 <!-- <div *ngIf="selectedItem.type === 'Number' else noStateDescription">  <button mat-button [disabled]="!rateControl.valid &&  selectedItem.type === 'Number'" (click)="save()" tabindex="-1">Save</button> </div>  --> 
-   <button mat-button [disabled]="!rateControl.valid && selectedItem.type !== 'Switch'" (click)="save()" tabindex="-1">Save</button>
+   <button mat-button [disabled]="!daysChosen || (!rateControl.valid && selectedItem.type !== 'Switch')" (click)="save()" tabindex="-1">Save</button>
 	</div>
 	</div>
 </section>
