--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
@@ -12,8 +12,8 @@
                         When <i>{{item.label}}</i> of <i>{{mod.thing.label}}</i> is <i> <span *ngIf="item.type === 'Number'"> equal to</span> <span *ngIf="item.type === 'Switch'">turned to </span> {{parseState(mod.state)}}
                         </i> <span *ngIf="item.stateDescription && item.stateDescription.pattern && !item.stateDescription.pattern.split(' ').pop().startsWith('%')">{{item.stateDescription.pattern.split(' ').pop()}}</span>
                     </div>
-                    <div *ngIf="mod.tempTime">
-                        When the time is <i>{{mod.tempTime}}</i> on <i>{{parseDays(mod.days)}}</i>
+                      <div *ngIf="mod.time">
+                        When the time is <i>{{mod.time}}</i> on <i>{{parseDays(mod.days)}}</i>
                     </div>
                 </div>
                 <div *ngIf="mod.type === 'condition'">
@@ -21,8 +21,8 @@
                         When <i>{{item.label}}</i> of <i>{{mod.thing.label}}</i> is <i> <span *ngIf="item.type === 'Number'">{{getOperator(mod.operator)}} </span> <span *ngIf="item.type === 'Switch'">turned to </span> {{parseState(mod.state)}}
                         </i> <span *ngIf="item.stateDescription && item.stateDescription.pattern && !item.stateDescription.pattern.split(' ').pop().startsWith('%')">{{item.stateDescription.pattern.split(' ').pop()}}</span>
                     </div>
-                    <div *ngIf="mod.tempTime">
-                        When the time is <i>{{mod.tempTime}}</i> on <i>{{parseDays(mod.days)}}</i>
+                      <div *ngIf="mod.time">
+                        When the time is <i>{{mod.time}}</i> on <i>{{parseDays(mod.days)}}</i>
                     </div>
                 </div>
                 <div *ngIf="mod.type === 'action'">
