--- a/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
@@ -61,7 +61,7 @@
 					When the time is between
 					<mat-form-field style="width: 75px"> <input matInput [(ngModel)]="stateInput" type="time" [(formControl)]="rateControl"></mat-form-field>
 					and
-					<mat-form-field style="width: 75px"> <input matInput [(ngModel)]="secondTimeInput" type="time" [(formControl)]="rateControl"></mat-form-field>
+					<mat-form-field style="width: 75px"> <input matInput [(ngModel)]="secondTimeInput" type="time"></mat-form-field>
 				</div>
 			</div>
 			<div *ngIf="selectedItem.type === 'DateTime'">
